NetBSD Problem Report #39967

From tron@zhadum.org.uk  Thu Nov 20 08:15:24 2008
Return-Path: <tron@zhadum.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 27D1863B874
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 20 Nov 2008 08:15:24 +0000 (UTC)
Message-Id: <20081120081520.F13AC3E3CF@lyssa.zhadum.org.uk>
Date: Thu, 20 Nov 2008 08:15:20 +0000 (GMT)
From: tron@zhadum.org.uk
Reply-To: tron@zhadum.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: Kernel with COMPAT_NETBSD32 and without COMPAT_40 doesn't build
X-Send-Pr-Version: 3.95

>Number:         39967
>Category:       port-amd64
>Synopsis:       Kernel with COMPAT_NETBSD32 and without COMPAT_40 doesn't build
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    tron
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Nov 20 08:20:00 +0000 2008
>Closed-Date:    Sat Nov 22 08:46:10 +0000 2008
>Last-Modified:  Sat Nov 22 08:46:10 +0000 2008
>Originator:     tron@zhadum.org.uk
>Release:        NetBSD 5.0_BETA 2008-11-19 sources
>Organization:
Matthias Scheler                                  http://zhadum.org.uk/
>Environment:
System: NetBSD lyssa.zhadum.org.uk 5.0_BETA NetBSD 5.0_BETA (COLWYN.64) #0: Wed Nov 19 12:39:30 GMT 2008 tron@lyssa.zhadum.org.uk:/src/sys/compile/COLWYN.64 amd64
Architecture: x86_64
Machine: amd64
>Description:
I tried to remove "COMPAT_40" from NetBSD/amd64 kernel configuration because
there aren't any old binaries on the system and I prefer a kernel without
SA support. Unfortunately this breaks the build:

      link  COLWYN.64/netbsd
/src/tools/bin/x86_64--netbsd-ld -Map netbsd.map --cref -T /usr/src/sys/arch/amd64/conf/kern.ldscript -Ttext 0xffffffff80100000 -e start -X -o netbsd ${SYSTEM_OBJ} ${EXTRA_OBJ} vers.o
netbsd32_netbsd.o: In function `netbsd32_mount':
/usr/src/sys/compat/netbsd32/netbsd32_netbsd.c:395: undefined reference to `compat_40_sys_mount'
netbsd32_sa.o: In function `netbsd32_sa_register':
/usr/src/sys/compat/netbsd32/netbsd32_sa.c:144: undefined reference to `dosa_register'
netbsd32_sa.o: In function `netbsd32_sa_stacks':
/usr/src/sys/compat/netbsd32/netbsd32_sa.c:187: undefined reference to `sa_stacks1'
*** [netbsd] Error code 1
1 error

nbmake: stopped in /src/sys/compile/COLWYN.64
      214.75 real       288.05 user        49.35 sys

>How-To-Repeat:
Comment out "COMPAT_40" in the "GENERIC" kernel configuration and try to
build it.

>Fix:
Not known yet.

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: port-amd64-maintainer->tron
Responsible-Changed-By: tron@NetBSD.org
Responsible-Changed-When: Thu, 20 Nov 2008 11:56:09 +0000
Responsible-Changed-Why:
I'll handle this PR.


From: Matthias Scheler <tron@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39967 CVS commit: src/sys/compat/netbsd32
Date: Thu, 20 Nov 2008 11:56:40 +0000 (UTC)

 Module Name:	src
 Committed By:	tron
 Date:		Thu Nov 20 11:56:40 UTC 2008

 Modified Files:
 	src/sys/compat/netbsd32: netbsd32_netbsd.c netbsd32_sa.c

 Log Message:
 Make it possible to compile a kernel with COMPAT_NETBSD32 but without
 COMPAT_40. This fixes PR port-amd64/39967.


 To generate a diff of this commit:
 cvs rdiff -r1.147 -r1.148 src/sys/compat/netbsd32/netbsd32_netbsd.c
 cvs rdiff -r1.7 -r1.8 src/sys/compat/netbsd32/netbsd32_sa.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: tron@NetBSD.org
State-Changed-When: Thu, 20 Nov 2008 12:05:40 +0000
State-Changed-Why:
The bug is fixed in NetBSD-current. A pullup for the "netbsd-5" branch
has been requested.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39967 CVS commit: [netbsd-5] src/sys/compat/netbsd32
Date: Sat, 22 Nov 2008 04:54:42 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Sat Nov 22 04:54:42 UTC 2008

 Modified Files:
 	src/sys/compat/netbsd32 [netbsd-5]: netbsd32_netbsd.c netbsd32_sa.c

 Log Message:
 Pull up following revision(s) (requested by tron in ticket #100):
 	sys/compat/netbsd32/netbsd32_netbsd.c: revision 1.148
 	sys/compat/netbsd32/netbsd32_sa.c: revision 1.8
 Make it possible to compile a kernel with COMPAT_NETBSD32 but without
 COMPAT_40. This fixes PR port-amd64/39967.


 To generate a diff of this commit:
 cvs rdiff -r1.145 -r1.145.4.1 src/sys/compat/netbsd32/netbsd32_netbsd.c
 cvs rdiff -r1.7 -r1.7.4.1 src/sys/compat/netbsd32/netbsd32_sa.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: tron@NetBSD.org
State-Changed-When: Sat, 22 Nov 2008 08:46:10 +0000
State-Changed-Why:
The fix was pulled up into the "netbsd-5" branch.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.