Make it possible to compile a kernel with COMPAT_NETBSD32 but without COMPAT_40. This fixes PR port-amd64/39967.